[project]
name = "omop-graph"
version = "0.2.0"
description = "Explainable, OMOP-native knowledge graph traversal and pathfinding"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Georgie Kennedy", email = "georgie.kennedy@unsw.edu.au" }
]
license = { text = "Apache-2.0" }

keywords = [
  "OMOP",
  "OHDSI",
  "clinical-data",
  "health-informatics",
  "sqlalchemy",
  "knowledge-graph",
  "LLM-grounding",
  "real-world-evidence"
]


classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
    "omop-alchemy>=0.5.0",
    "sqlalchemy>=2.0.45",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "rich>=14.2.0",
    "ruff>=0.14.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
